--- a/observables/src/app/home/home.component.html
+++ b/observables/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <h3>Home carregada</h3>
 
+<!-- Somente para demonstrar debounce -->
 <div class="row">
   <div class="col-sm-12">
     <div class="form-group">
       <label for="">Busca</label>
-      <input type="text" #busca class="form-control" (keyup)="keyup(busca.value)">
+      <input type="text" #busca class="form-control" 
+        (keyup)="keyup(busca.value)">
       {{valor}}
     </div>
   </div>
