--- a/form-reactive/src/app/app.component.html
+++ b/form-reactive/src/app/app.component.html
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <button class="btn btn-primary mt-3" type="button" (click)="enviar()">Enviar</button>
+        <button class="btn btn-primary mt-3" type="button" (click)="enviar()" [disabled]="!usuarioForm.valid">Enviar</button>
       </div>
     </div>
   </div>
