--- a/form-td/src/app/app.component.html
+++ b/form-td/src/app/app.component.html
@@ -28,6 +28,9 @@
             ngModel
             required
             email>
+            <!-- #email="ngModel" -->
+            <!-- <span class="help-block" *ngIf="!email.valid && email.touched">Informe um e-mail válido</span> -->
+
           </div>
         </div>
         <p *ngIf="!dadosBasicos.valid && dadosBasicos.touched">Dados básicos inválidos!</p>
